se corrige el archivo para definición de los actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,11 +15,11 @@ jobs:
     steps:
       # Paso 1: Clonar el repositorio
       - name: Checkout del código
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4 # Actualizado a la última versión
 
       # Paso 2: Configurar JDK
       - name: Configurar JDK
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4 # Actualizado a la última versión
         with:
           distribution: 'adopt'
           java-version: '11'
@@ -43,9 +43,3 @@ jobs:
       # Paso 7: Generar reporte de cobertura con JaCoCo
       - name: Generar Reporte de Cobertura
         run: mvn jacoco:report
-
-      # (Opcional) Paso 8: Subir métricas a Codecov
-      - name: Publicar cobertura en Codecov
-        uses: codecov/codecov-action@v3
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }} # Generar token en https://codecov.io/
