modificacion de plugin de chackstyle para que funciones con la ultima version

--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,17 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
-                <version>3.1.2</version>
+                <version>3.2.0</version> <!-- Versión actualizada -->
+                <configuration>
+                    <configLocation>src/main/resources/google_checks.xml</configLocation> <!-- Reglas de estilo -->
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.puppycrawl.tools</groupId>
+                        <artifactId>checkstyle</artifactId>
+                        <version>10.12.3</version> <!-- Última versión de Checkstyle -->
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
