--- a/pom.xml
+++ b/pom.xml
@@ -27,10 +27,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>3.11.0</version> <!-- Asegúrate de usar la última versión -->
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source> <!-- Versión del lenguaje -->
+                    <target>11</target> <!-- Versión del bytecode -->
+                    <encoding>UTF-8</encoding> <!-- Configuración de codificación -->
                 </configuration>
             </plugin>
             <plugin>
